--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
 
     // Extra Libraries
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 
 }
