--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".StationPicker"
             android:label="@string/choose_station" />
-        <activity android:name=".SteigPicker"></activity>
+        <activity android:name=".SteigPicker" />
     </application>
 
 </manifest>
