--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,15 +25,19 @@
         <activity
             android:name=".AlarmSetterActivity"
             android:label="@string/activity_alarm_setter"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".StationPicker"
-            android:label="@string/choose_station" />
-        <activity android:name=".SteigPicker" />
+            android:label="@string/choose_station"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SteigPicker"
+            android:label="@string/choose_steig"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
