--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
@@ -23,19 +23,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlarmSetterActivity"
+            android:name=".activities.AlarmSetterActivity"
             android:label="@string/activity_alarm_setter"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".activities.MainActivity" />
         </activity>
         <activity
-            android:name=".StationPicker"
+            android:name=".activities.StationPickerActivity"
             android:label="@string/choose_station"
             android:screenOrientation="portrait" />
-        <activity android:name=".SteigPicker"
+        <activity android:name=".activities.SteigPickerActivity"
             android:label="@string/choose_steig"
             android:screenOrientation="portrait"/>
     </application>
