--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,9 +35,15 @@
             android:name=".activities.StationPickerActivity"
             android:label="@string/choose_station"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.SteigPickerActivity"
+        <activity
+            android:name=".activities.SteigPickerActivity"
             android:label="@string/choose_steig"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".activities.DialogEditActivity"
+            android:label="@string/alarm_settings"
+            android:icon="@drawable/ic_settings"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
 </manifest>
