--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -43,6 +45,16 @@
         <activity android:name=".activities.DialogEditActivity"
             android:label="@string/alarm_settings"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+
+        <receiver android:name=".utils.AlarmManager$AlarmReceiver"
+            android:enabled="true"/>
+        <receiver
+            android:name=".utils.AlarmManager$BootReceiver"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
