Working onetime alarms

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,10 +46,10 @@
             android:label="@string/alarm_settings"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
 
-        <receiver android:name=".utils.AlarmManager$AlarmReceiver"
+        <receiver android:name=".utils.AlarmUtils$AlarmReceiver"
             android:enabled="true"/>
         <receiver
-            android:name=".utils.AlarmManager$BootReceiver"
+            android:name=".utils.AlarmUtils$BootReceiver"
             android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
