--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,20 +26,17 @@
         <activity
             android:name=".activities.AlarmSetterActivity"
             android:label="@string/activity_alarm_setter"
-            android:parentActivityName=".activities.MainActivity"
-            android:screenOrientation="portrait">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
         <activity
             android:name=".activities.StationPickerActivity"
-            android:label="@string/choose_station"
-            android:screenOrientation="portrait" />
+            android:label="@string/choose_station" />
         <activity
             android:name=".activities.SteigPickerActivity"
-            android:label="@string/choose_steig"
-            android:screenOrientation="portrait" />
+            android:label="@string/choose_steig" />
         <activity
             android:name=".activities.DialogEditActivity"
             android:label="@string/alarm_settings"
