--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
 
 android {
@@ -17,9 +16,10 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            it.buildConfigField('String,', 'API_KEY', WienerLinienAPIReleaseKey)
         }
-        buildTypes.each {
-            it.buildConfigField('String', 'API_KEY', WienerLinienAPIKey)
+        debug {
+            it.buildConfigField('String', 'API_KEY', WienerLinienAPIDevelopmentKey)
         }
     }
 }
@@ -29,13 +29,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:design:25.4.0'
 
-    // Extra Libraries
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
-    compile 'com.google.dagger:dagger-android:2.11'
-    compile 'com.google.dagger:dagger-android-support:2.11'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.1.0'
 }
 repositories {
     mavenCentral()
