--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
+apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 25
@@ -40,6 +41,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-jackson:2.1.0'
 
     compile 'org.apache.commons:commons-csv:1.5'
+
+    compile 'co.trikita:log:1.1.5'
+
 }
 repositories {
     mavenCentral()
