--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,6 @@ android {
             it.buildConfigField('String', 'API_KEY', WienerLinienAPIDevelopmentKey)
         }
     }
-
-    // The three Jackson JARs all have a license file called LICENSE ==> "DuplicateFileException"
-    // TODO Add in-app activity screen for displaying licenses
-    packagingOptions {
-        exclude 'META-INF/LICENSE'
-    }
 }
 
 dependencies {
@@ -38,6 +32,7 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
     compile('com.squareup.retrofit2:converter-simplexml:2.3.0') {
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'xpp3', module: 'xpp3'
