--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'io.realm:realm-gradle-plugin:3.7.0'
+        classpath 'io.realm:realm-gradle-plugin:4.1.1'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
     }
 }
 
