--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'co.trikita:log:1.1.5'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
-    implementation 'net.sourceforge.streamsupport:streamsupport:1.5.6'
+    implementation 'com.annimon:stream:1.1.9'
 }
 repositories {
     mavenCentral()
