--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            it.buildConfigField('String,', 'API_KEY', WienerLinienAPIReleaseKey)
+            it.buildConfigField('String', 'API_KEY', WienerLinienAPIReleaseKey)
         }
         debug {
             it.buildConfigField('String', 'API_KEY', WienerLinienAPIDevelopmentKey)
@@ -48,7 +48,5 @@ dependencies {
     implementation 'com.annimon:stream:1.1.9'
 }
 repositories {
-    mavenCentral()
-    jcenter()
-    maven { url "https://jitpack.io" }
+
 }
